--- a/soccer.html
+++ b/soccer.html
@@ -95,23 +95,91 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Mainz 05 vs Hoffenheim</a>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Real Oviedo vs Rayo Vallecano</a>
 <td>November 21, 2025 11:30 AM</td>
 <td><span class="countdown-timer" data-end="November 22, 2025 10:30:00" data-start="November 21, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Nice vs Marseille</a>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Auxerre vs Lyon</a>
 <td>November 21, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="November 22, 2025 10:45:00" data-start="November 21, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Valencia vs Levante</a>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Cremonese vs Roma</a>
 <td>November 21, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 22, 2025 11:00:00" data-start="November 21, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Atlético CP vs Benfica</a>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Leeds United vs Aston Villa</a>
 <td>November 21, 2025 12:30 PM</td>
 <td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Nantes vs Lorient</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Toulouse vs Angers SCO</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Real Betis vs Girona</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Arsenal vs Tottenham</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Lazio vs Lecce</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Getafe vs Atlético Madrid</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Al Nassr vs Al Khaleej</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Bahia vs Vasco Da Gama</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">São Paulo vs Juventude</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Inter Milan vs Milan</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Lille vs Paris</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Elche vs Real Madrid</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Cincinnati vs Inter Miami</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs Talleres Córdoba</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Cruzeiro vs Corinthians</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Colo-Colo vs Unión La Calera</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-17">Philadelphia Union vs New York City</a>
+<td>November 21, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 21, 2025 12:30:00"></span></td>
+<tr>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
