--- a/nba.html
+++ b/nba.html
@@ -263,6 +263,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for November 22, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Los Angeles Clippers vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        November 22, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 23, 2025 10:00 AM:00" data-start="November 22, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         New York Knicks vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        November 22, 2025 2:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 23, 2025 2:00 PM:00" data-start="November 22, 2025 2:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Atlanta Hawks vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        November 22, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 23, 2025 4:00 PM:00" data-start="November 22, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Washington Wizards vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        November 22, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 23, 2025 5:00 PM:00" data-start="November 22, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Detroit Pistons vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        November 22, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 23, 2025 5:00 PM:00" data-start="November 22, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Memphis Grizzlies vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        November 22, 2025 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 23, 2025 5:30 PM:00" data-start="November 22, 2025 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Sacramento Kings vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        November 22, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 23, 2025 7:00 PM:00" data-start="November 22, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
