--- a/soccer.html
+++ b/soccer.html
@@ -97,101 +97,101 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Burnley vs Chelsea</a>
 <td>November 22, 2025 04:30 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 10:30:00" data-start="November 22, 2025 11:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 03:30:00" data-start="November 22, 2025 04:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Deportivo Alavés vs Celta Vigo</a>
 <td>November 22, 2025 05:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 10:45:00" data-start="November 22, 2025 11:45:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 04:00:00" data-start="November 22, 2025 05:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Bayern München vs Freiburg</a>
 <td>November 22, 2025 06:30 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:00:00" data-start="November 22, 2025 12:00:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 05:30:00" data-start="November 22, 2025 06:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Wolfsburg vs Bayer Leverkusen</a>
 <td>November 22, 2025 06:30 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 05:30:00" data-start="November 22, 2025 06:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Bournemouth vs West Ham</a>
 <td>November 22, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 06:00:00" data-start="November 22, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Brighton vs Brentford</a>
 <td>November 22, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 06:00:00" data-start="November 22, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Fulham vs Sunderland</a>
 <td>November 22, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 06:00:00" data-start="November 22, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Liverpool vs Nottingham</a>
 <td>November 22, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 06:00:00" data-start="November 22, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-8">Wolves vs Crystal Palace</a>
 <td>November 22, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 06:00:00" data-start="November 22, 2025 07:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Barcelona vs Athletic Club</a>
 <td>November 22, 2025 07:15 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 06:15:00" data-start="November 22, 2025 07:15:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Lens vs Strasbourg</a>
 <td>November 22, 2025 08:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 07:00:00" data-start="November 22, 2025 08:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-10">Galatasaray vs Gençlerbirliği</a>
 <td>November 22, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 08:00:00" data-start="November 22, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-11">Fiorentina vs Juventus</a>
 <td>November 22, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 08:00:00" data-start="November 22, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-12">Newcastle United vs Manchester City</a>
 <td>November 22, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 08:30:00" data-start="November 22, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Osasuna vs Real Sociedad</a>
 <td>November 22, 2025 09:30 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 08:30:00" data-start="November 22, 2025 09:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Rennes vs Monco</a>
 <td>November 22, 2025 10:00 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 09:00:00" data-start="November 22, 2025 10:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-13">Napoli vs Atalanta</a>
 <td>November 22, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 10:45:00" data-start="November 22, 2025 11:45:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Villarreal vs Mallorca</a>
 <td>November 22, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 11:00:00" data-start="November 22, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-14">PSG vs Le Havre</a>
 <td>November 22, 2025 12:05 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 11:05:00" data-start="November 22, 2025 12:05:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Lanús vs Atlético Mineiro</a>
 <td>November 22, 2025 13:00 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 12:00:00" data-start="November 22, 2025 13:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-15">Botafogo vs Grêmio</a>
 <td>November 22, 2025 14:30 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 13:30:00" data-start="November 22, 2025 14:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-16">Flamengo vs RB Bragantino</a>
 <td>November 22, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 15:30:00" data-start="November 22, 2025 16:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-17">Palmeiras vs Fluminense</a>
 <td>November 22, 2025 16:30 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 15:30:00" data-start="November 22, 2025 16:30:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-18">Vancouver Whitecaps vs LAFC</a>
 <td>November 22, 2025 18:30 PM</td>
-<td><span class="countdown-timer" data-end="November 22, 2025 11:30:00" data-start="November 22, 2025 12:30:00"></span></td>
+<td><span class="countdown-timer" data-end="November 23, 2025 17:30:00" data-start="November 22, 2025 18:30:00"></span></td>
 <tr>
-</tbody></table>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
