--- a/index.html
+++ b/index.html
@@ -118,24 +118,39 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-2">Ligue 1</td>
-                    <td>November 21, 2025 11:45 AM</td>
-                    <td><span class="countdown-timer" data-start="November 21, 2025 11:45:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/ufc">UFC Qatar: Tsarukyan vs Hooker</td>
+                    <td>November 22, 2025 07:00 AM</td>
+                    <td><span class="countdown-timer" data-start="November 22, 2025 07:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nba">NBA</td>
-                    <td>November 21, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 21, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-2">Premier League</td>
+                    <td>November 22, 2025 07:00 AM</td>
+                    <td><span class="countdown-timer" data-start="November 22, 2025 07:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1</td>
-                    <td>November 21, 2025 16:30 PM</td>
-                    <td><span class="countdown-timer" data-start="November 21, 2025 16:30:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer-streams-2">Laliga</td>
+                    <td>November 22, 2025 07:15 AM</td>
+                    <td><span class="countdown-timer" data-start="November 22, 2025 07:15:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</td>
-                    <td>November 21, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 21, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl">NCAA (College Football)</td>
+                    <td>November 21, 2025 09:00 AM</td>
+                    <td><span class="countdown-timer" data-start="November 22, 2025 09:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/ppv-streams-1">RING IV: Night Of Champions</td>
+                    <td>November 22, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 22, 2025 12:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/aew">AEW: Full Gear</td>
+                    <td>November 22, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 22, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/f1-streams">Formula 1 Grand Prix</td>
+                    <td>November 22, 2025 20:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 22, 2025 16:30:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
