--- a/nba.html
+++ b/nba.html
@@ -235,6 +235,138 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for November 23, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Miami Heat vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Charlotte Hornets vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        November 23, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 3:00 PM:00" data-start="November 23, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Orlando Magic vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        November 23, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 3:00 PM:00" data-start="November 23, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Los Angeles Clippers vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        November 23, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 3:00 PM:00" data-start="November 23, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Brooklyn Nets vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        November 23, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 3:00 PM:00" data-start="November 23, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Portland Trail Blazers vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        November 23, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 4:00 PM:00" data-start="November 23, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         San Antonio Spurs vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        November 23, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 5:00 PM:00" data-start="November 23, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Los Angeles Lakers vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        November 23, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 5:00 PM:00" data-start="November 23, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
