--- a/nfl.html
+++ b/nfl.html
@@ -137,6 +137,19 @@
     <tbody>
      <tr>
       <td>
+       <a href="https://roxiestreams.live/redzone">
+        NFL RedZone
+       </a>
+      </td>
+      <td>
+       November 23, 2025 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
        <a href="https://roxiestreams.live/nfl-streams-1">
         Pittsburgh Steelers vs Chicago Bears
        </a>
