--- a/redzone.html
+++ b/redzone.html
@@ -97,9 +97,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/redzone.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/redzone2.m3u8')">Stream 2</button>
-            </div>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/redzone.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/redzone2.m3u8')">Stream 2</button>
+          </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -133,7 +133,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://abigail.009292.xyz/redzone.m3u8');
+            showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/redzone.m3u8');
         };
     </script>
     <script>
