--- a/index.html
+++ b/index.html
@@ -123,14 +123,9 @@
                     <td><span class="countdown-timer" data-start="November 23, 2025 07:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-2">Premier League</td>
-                    <td>November 22, 2025 07:00 AM</td>
-                    <td><span class="countdown-timer" data-start="November 22, 2025 07:00:00" data-end="November 30, 2025 23:30:00"></span></td>
-                </tr>
-                <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-2">Laliga</td>
-                    <td>November 22, 2025 07:15 AM</td>
-                    <td><span class="countdown-timer" data-start="November 22, 2025 07:15:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">Laliga</td>
+                    <td>November 23, 2025 12:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 23, 2025 12:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
