--- a/soccer-streams-12.html
+++ b/soccer-streams-12.html
@@ -97,9 +97,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/main.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://loveliness.009292.xyz/liverpool2.m3u8')">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/ncaa12.m3u8')">Stream 3</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/deportes.m3u8')">Stream 1 (ES)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/abc.m3u8')">Stream 2 (EN)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
