--- a/nfl-streams-11.html
+++ b/nfl-streams-11.html
@@ -97,8 +97,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/nfl11.m3u8')">Stream 1</button>
-            </div>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nfl11.m3u8')">Stream 1</button>
+          </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -132,7 +132,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://abigail.009292.xyz/nfl11.m3u8');
+            showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nfl11.m3u8');
         };
     </script>
     <script>
