--- a/nfl-streams-12.html
+++ b/nfl-streams-12.html
@@ -97,7 +97,9 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.qiyarmedia.com/nfl12.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/nfl12.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/nfl12alt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/nfl12alt.m3u8')">Stream 3</button>
           </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -132,7 +134,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://abigail.qiyarmedia.com/nfl12.m3u8');
+            showPlayer('clappr', 'https://abigail.009292.xyz/nfl12.m3u8');
         };
     </script>
     <script>
